[project]
name = "logz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "boto3>=1.39.3",
    "botocore>=1.39.3",
    "cachetools>=5.3.0",
    "et-xmlfile>=2.0.0",
    "jmespath>=1.0.1",
    "json5>=0.12.0",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "s3transfer>=0.13.0",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
]
